--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,5 +19,5 @@ repos:
   - repo: https://github.com/commitizen-tools/commitizen
     rev: v2.37.0
     hooks:
-      - id: commitizen
+      - id: commitizen-branch
         stages: [push]
